[tool.poetry]
name = "python-sca-test"
version = "0.1.0"
description = "A test project for SCA"
authors = ["Srijan Saurav <srijan@deepsource.io>"]
readme = "README.md"
packages = [{include = "python_sca_test"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^10.1"
keyring = "25.3.0"
cryptography = "43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
